...
                                        },
                                        label = {
                                            Text(
                                                when (mode) {
                                                    ProxyMode.RULE -> "规则"
                                                    ProxyMode.GLOBAL -> "全局"
                                                    ProxyMode.DIRECT -> "直连"
                                                }
                                            )
                                        },
                                        leadingIcon = if (proxiesState.mode == mode) {
                                            {
                                                Icon(
...
